# IPTVGrab

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  downloader.py  main.py  requirements.txt  run.py  static
.github/: copilot-instructions.md
crates/m3u8-core/: Cargo.toml
crates/m3u8-core/src/: aes.rs  downloader.rs  error.rs  lib.rs  merge.rs  parser.rs  types.rs
crates/mobile-ffi/: Cargo.toml  build.rs
crates/mobile-ffi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  helpers.rs  lib.rs  main.rs  persistence.rs  router.rs  state.rs  types.rs
crates/server/src/handlers/: clip.rs  health.rs  merged.rs  mod.rs  playlists.rs  recents.rs  settings.rs  tasks.rs  transcode.rs  watch.rs  ws.rs
crates/server/tests/: clip_interrupted.rs
docs/superpowers/specs/: 2026-04-15-async-clip-tasks-tab-design.md  2026-04-15-clip-fixes-server-settings-design.md
flutter/: .gitignore  pubspec.yaml
flutter/android/app/: build.gradle.kts  proguard-rules.pro
flutter/ios/DownloadWidget/: DownloadActivityAttributes.swift  DownloadWidgetBundle.swift
flutter/ios/Frameworks/MobileFfi.xcframework/: Info.plist
flutter/ios/Runner/: AppDelegate.swift  Info.plist  MobileFfiForceLink.m
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/ios/Runner/Base.lproj/: LaunchScreen.storyboard
flutter/lib/src/: all_playlists_editor_page.dart  api_client.dart  app.dart  background_execution_bridge.dart  cast_bridge.dart  channel_browser_page.dart  clip_editor_dialog.dart  controller.dart  library_tab.dart  live_activities_bridge.dart  media_player_page.dart  mobile_ffmpeg.dart  models.dart  playlist_dialogs.dart  playlists_tab.dart  settings_tab.dart  source_settings_page.dart  task_helpers.dart  tasks_tab.dart  theme.dart  utils.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: copy_dylib.sh  embed_dylib.sh
flutter/test/: utils_test.dart  widget_test.dart  widgets_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/runner/: Runner.rc
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: api.ts  auth.ts  bootstrap-shim.ts  channel-card.ts  editor.ts  health.ts  main.ts  player.ts  playlists.ts  recents.ts  settings.ts  tasks.ts  tv-nav.ts  types.ts  ui.ts  utils.ts
frontend/src/styles/: styles.css
mobile/flutter/: README.md  analysis_options.yaml  pubspec.yaml
mobile/flutter/android/app/: build.gradle.kts
mobile/flutter/ios/: ExportOptions.debugging.plist
mobile/flutter/ios/DownloadWidget/: DownloadLiveActivity.swift  Info.plist
mobile/flutter/ios/Flutter/: WidgetExtension.xcconfig
mobile/flutter/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
mobile/flutter/ios/Runner.xcodeproj/: project.pbxproj
mobile/flutter/lib/: main.dart
mobile/flutter/lib/src/: api_client.dart  app.dart  background_execution_bridge.dart  controller.dart  download_tab.dart  live_activities_bridge.dart  local_server_bridge.dart  local_server_bridge_native.dart  local_server_bridge_web.dart  media_utils.dart  models.dart  native_ios_player.dart  playlist_dialogs.dart  playlists_tab.dart  task_helpers.dart  widgets.dart
mobile/flutter/linux/runner/: my_application.cc
mobile/flutter/macos/: copy_dylib.sh
mobile/flutter/macos/Runner.xcodeproj/: project.pbxproj
mobile/flutter/test/: models_test.dart  task_helpers_test.dart  theme_test.dart  utils_test.dart  widget_test.dart  widgets_test.dart
mobile/flutter/windows/: CMakeLists.txt
mobile/flutter/windows/runner/: Runner.rc  main.cpp
mobile/ios/Runner.xcodeproj/: project.pbxproj
static/: app.js  bootstrap-shim.js  compat.css  index.html  login.html  styles.css
tests/: test_api.sh
(+13 files in other folders)
