[workspace]
members = [
    "crates/m3u8-core",
    "crates/server",
    "crates/mobile-ffi",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["Media Nest"]
license    = "MIT"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1",    features = ["full"] }
tokio-util  = { version = "0.7",  features = ["io"] }
futures     = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "stream", "json", "gzip",
] }

# M3U8
m3u8-rs = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Web
axum        = { version = "0.7", features = ["macros", "ws"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["fs", "cors", "set-header"] }

# Crypto
aes    = "0.8"
cbc    = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["alloc"] }
hex    = "0.4"
hmac   = "0.12"
sha2   = "0.10"

# UniFFI
uniffi = { version = "0.28", features = ["tokio"] }

# Utilities
uuid              = { version = "1", features = ["v4"] }
anyhow            = "1"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url               = "2"
chrono            = { version = "0.4", features = ["serde"] }
