[package]
name    = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "m3u8-server"
path = "src/main.rs"

[dependencies]
m3u8-core          = { path = "../m3u8-core" }
reqwest            = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
regex-lite         = "0.1"
chrono             = { workspace = true }
url                = { workspace = true }
